--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,24 @@
 {
     "name"         : "jquery-tokeninput",
-    "version"      : "1.6.2",
-    "description"  : "Tokeninput is a jQuery plugin which allows your users to select multiple items from a predefined list, using autocompletion as they type to find each item.",
-    "main"         : [ "./src/jquery.tokeninput.js", "./styles/token-input.css" ],
+    "version"      : "1.8.0",
+    "description"  : "A modification of original jquery-tokeninput to support accent insensitive mode",
     "homepage"     : "http://loopj.com/jquery-tokeninput",
     "dependencies" : {
         "jquery" : ">= 1.5.x"
     },
+    "main"         : [
+        "src/jquery.tokeninput.js",
+        "styles/token-input.css"
+    ],
     "keywords"     : [
         "tokeninput",
         "input",
         "autocomplete"
     ],
-    "author" : {
-        "name" : "James Smith",
-        "web"  : "http://loopj.com"
-    },
+    "authors": [
+      "Vitor Siqueira <vitor@nitro2code.com>",
+      "James Smith (http://loopj.com)"
+    ],
     "license": [
         "http://www.opensource.org/licenses/mit-license.php",
         "http://www.opensource.org/licenses/gpl-license.php"
